; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_context.c_drm_legacy_newctx.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_context.c_drm_legacy_newctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { i32 }
%struct.drm_ctx = type { i32 }

@DRIVER_KMS_LEGACY_CONTEXT = common dso_local global i32 0, align 4
@DRIVER_LEGACY = common dso_local global i32 0, align 4
@EOPNOTSUPP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drm_legacy_newctx(%struct.drm_device* %0, i8* %1, %struct.drm_file* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.drm_device*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.drm_file*, align 8
  %8 = alloca %struct.drm_ctx*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.drm_file* %2, %struct.drm_file** %7, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to %struct.drm_ctx*
  store %struct.drm_ctx* %10, %struct.drm_ctx** %8, align 8
  %11 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %12 = load i32, i32* @DRIVER_KMS_LEGACY_CONTEXT, align 4
  %13 = call i32 @drm_core_check_feature(%struct.drm_device* %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %23, label %15

15:                                               ; preds = %3
  %16 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %17 = load i32, i32* @DRIVER_LEGACY, align 4
  %18 = call i32 @drm_core_check_feature(%struct.drm_device* %16, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* @EOPNOTSUPP, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %4, align 4
  br label %34

23:                                               ; preds = %15, %3
  %24 = load %struct.drm_ctx*, %struct.drm_ctx** %8, align 8
  %25 = getelementptr inbounds %struct.drm_ctx, %struct.drm_ctx* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @DRM_DEBUG(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = load %struct.drm_device*, %struct.drm_device** %5, align 8
  %29 = load %struct.drm_file*, %struct.drm_file** %7, align 8
  %30 = load %struct.drm_ctx*, %struct.drm_ctx** %8, align 8
  %31 = getelementptr inbounds %struct.drm_ctx, %struct.drm_ctx* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @drm_context_switch_complete(%struct.drm_device* %28, %struct.drm_file* %29, i32 %32)
  store i32 0, i32* %4, align 4
  br label %34

34:                                               ; preds = %23, %20
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i32 @drm_core_check_feature(%struct.drm_device*, i32) #1

declare dso_local i32 @DRM_DEBUG(i8*, i32) #1

declare dso_local i32 @drm_context_switch_complete(%struct.drm_device*, %struct.drm_file*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
